--- a/endnote.bib
+++ b/endnote.bib
@@ -334,6 +334,23 @@ http://dx.doi.org/10.18637/jss.v080.i01},
 	langid = {english}
 }
 
+@article{matzke_psychological_2009,
+	title = {Psychological interpretation of the ex-Gaussian and shifted Wald parameters: A diffusion model analysis},
+	volume = {16},
+	issn = {1531-5320},
+	url = {https://doi.org/10.3758/PBR.16.5.798},
+	doi = {10.3758/PBR.16.5.798},
+	shorttitle = {Psychological interpretation of the ex-Gaussian and shifted Wald parameters},
+	abstract = {A growing number of researchers use descriptive distributions such as the ex-Gaussian and the shifted Wald to summarize response time data for speeded two-choice tasks. Some of these researchers also assume that the parameters of these distributions uniquely correspond to specific cognitive processes. We studied the validity of this cognitive interpretation by relating the parameters of the ex-Gaussian and shifted Wald distributions to those of the Ratcliff diffusion model, a successful model whose parameters have well-established cognitive interpretations. In a simulation study, we fitted the ex-Gaussian and shifted Wald distributions to data generated from the diffusion model by systematically varying its parameters across a wide range of plausible values. In an empirical study, the two descriptive distributions were fitted to published data that featured manipulations of task difficulty, response caution, and a priori bias. The results clearly demonstrate that the ex-Gaussian and shifted Wald parameters do not correspond uniquely to parameters of the diffusion model. We conclude that researchers should resist the temptation to interpret changes in the ex-Gaussian and shifted Wald parameters in terms of cognitive processes. Supporting materials may be downloaded from http://pbr.psychonomic-journals .org/content/supplemental.},
+	pages = {798--817},
+	number = {5},
+	journaltitle = {Psychonomic Bulletin \& Review},
+	shortjournal = {Psychonomic Bulletin \& Review},
+	author = {Matzke, Dora and Wagenmakers, Eric-Jan},
+	urldate = {2020-07-13},
+	date = {2009-10-01},
+	langid = {english}
+}
 
 @article{golubickis_self-prioritization_2017,
 	title = {Self-prioritization and perceptual matching: The effects of temporal construal},
