--- a/r-references.bib
+++ b/r-references.bib
@@ -361,3 +361,10 @@
   url = {https://doi.org/10.7287/peerj.preprints.3188v1},
   doi = {10.7287/peerj.preprints.3188v1},
 }
+@Manual{R-patchwork,
+  title = {patchwork: The Composer of Plots},
+  author = {Thomas Lin Pedersen},
+  year = {2020},
+  note = {R package version 1.0.1},
+  url = {https://CRAN.R-project.org/package=patchwork},
+}
